Project cards styled

--- a/index.html
+++ b/index.html
@@ -14,9 +14,33 @@
         <div class="projects">
             <h2 class="title">Work in progress</h2>
             <div class="cards">
-                <div class="project-card">project </div>
-                <div class="project-card">project </div>
-                <div class="project-card">project </div>
+                <div class="project-card">
+                    <div class="project-img-div"></div>
+                    <div class="project-info">
+                        <div class="project-name">Project Name</div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur corrupti vel a expedita aliquid aut reiciendis labore,
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img-div"></div>
+                    <div class="project-info">
+                        <div class="project-name">Project Name</div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur corrupti vel a expedita aliquid aut reiciendis labore,
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-img-div"></div>
+                    <div class="project-info">
+                        <div class="project-name">Project Name</div>
+                        <div class="project-desc">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur corrupti vel a expedita aliquid aut reiciendis labore,
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="project-card">project </div>
                 <div class="project-card">project </div>
                 <div class="project-card">project </div> -->
