--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSIT Tech Updates</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -55,9 +56,9 @@
         </div>
     </div>
     <div class="footer">
-        <div class="social">fb</div>
-        <div class="social">ln</div>
-        <div class="social">In</div>
+        <div class="social"><i class="medium material-icons">facebook</i></div>
+        <div class="social"><i class="medium material-icons">linkedin</i></div>
+        <div class="social"><i class="medium material-icons">instagram</i></div>
     </div>
 
     <script src="index.js"></script>
