Added the social sites connections, changed to poppins font and some other font sixe changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSIT Tech Updates</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -25,13 +26,16 @@
         </div>
     </div>
     <div class="footer">
+        <i class="fas fa-globe-americas website"> <a href="https://h4c.ieeessitvit.co.in/" class="web-link">Website</a> </i>
+        
         <div class="socials">
-            <div class="social">fb</div>
-            <div class="social">ln</div>
-            <div class="social">In</div>
+            <a href="https://www.facebook.com/SSITVIT" class="fab fa-facebook social"></a> 
+            <a href="https://www.linkedin.com/company/ieee-ssit-vit/" class="fab fa-linkedin social"></a>
+            <a href="https://www.instagram.com/ieeessit/" class="fab fa-instagram social"></a>
         </div>
         
     </div>
+    <script src="https://kit.fontawesome.com/82262f4dc4.js" crossorigin="anonymous"></script>
 </body>
     <script src="assets/js/index.js"></script>
     <script src="assets/js/monthlyUpdates.js"></script>
