CSS was not loaded. So, I have tried making some changes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <img class="logo" src="assets/img/logo.png" alt="SSIT LOGO">
+        <img class="logo" src="/assets/img/logo.png" alt="SSIT LOGO">
     </nav>
     <div class="container">
         <div class="projects">
@@ -39,6 +39,6 @@
     </div>
     <script src="https://kit.fontawesome.com/82262f4dc4.js" crossorigin="anonymous"></script>
 </body>
-    <script src="assets/js/index.js"></script>
-    <script src="assets/js/monthlyUpdates.js"></script>
+    <script src="/assets/js/index.js"></script>
+    <script src="/assets/js/monthlyUpdates.js"></script>
 </html>
