Removed the first slashes(/) of some sources

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSIT Tech Updates</title>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/img/logo.png">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/logo.png">
 </head>
 <body>
     <nav class="navbar">
-        <img class="logo" src="/assets/img/logo.png" alt="SSIT LOGO">
+        <img class="logo" src="assets/img/logo.png" alt="SSIT LOGO">
     </nav>
     <div class="container">
         <div class="projects">
@@ -39,6 +39,6 @@
     </div>
     <script src="https://kit.fontawesome.com/82262f4dc4.js" crossorigin="anonymous"></script>
 </body>
-    <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/monthlyUpdates.js"></script>
+    <script src="assets/js/index.js"></script>
+    <script src="assets/js/monthlyUpdates.js"></script>
 </html>
