fix: updated sorting

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSIT Tech Updates</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <nav class="navbar">
-        <img class="logo" src="assets/img/logo.png" alt="SSIT LOGO">
+        <img class="logo" src="./assets/img/logo.png" alt="SSIT LOGO">
     </nav>
     <div class="container">
         <div class="projects">
@@ -33,6 +33,6 @@
         
     </div>
 </body>
-    <script src="assets/js/index.js"></script>
-    <script src="assets/js/monthlyUpdates.js"></script>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/monthlyUpdates.js"></script>
 </html>
