--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="footer">
-        <i class="fas fa-globe-americas website"> <a href="https://h4c.ieeessitvit.co.in/" class="web-link">Website</a> </i>
+        <i class="fas fa-globe-americas website"> <a href="https://ssitvit.netlify.app/" class="web-link">IEEE SSIT-VIT</a> </i>
         
         <div class="socials">
             <a href="https://www.facebook.com/SSITVIT" class="fab fa-facebook social"></a> 
